--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,11 @@ Date iCal 7.x
 Version 7.x-1.x-dev
 ===================
 
+- Issue #1833362, convert to using the iCalcreator library, rather than the theme system, for formatting iCal data.
+- Issue #1793868, fix error when adding iCal view mode to non-standard entities.
+- Issue #1863448, Remove extraneous div around the feed icon.
+
+
 ===================
 Version 7.x-1.1
 ===================
