--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Version 7.x-1.x-dev
 - Issue #1833362, convert to using the iCalcreator library, rather than the theme system, for formatting iCal data.
 - Issue #1793868, fix error when adding iCal view mode to non-standard entities.
 - Issue #1863448, Remove extraneous div around the feed icon.
+- Issue #1721678, incorporate abandoned Parser iCal module's Feeds plugin, allowing Date iCal to parse iCal feeds.
 
 
 ===================
