--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,14 @@ Date iCal 7.x
 ===================
 
 ===================
+Version 7.x-2.1 through 7.x-2.3
+===================
+- Issue #1529506, Added optional webcal:// support.
+- Issue #1890736, Added ability to exclude the X-WR-CALNAME property.
+- Issue #1565410, Sites with "Clean URLs" disabled can now download feeds normally.
+- Several minor bigfixes, and cleanup of the iCal icon theming.
+
+===================
 Version 7.x-2.0
 ===================
 - Issue #1721678, incorporate abandoned Parser iCal module's Feeds plugin, allowing Date iCal to parse iCal feeds.
